@@ -1,3 +1,13 @@
+2016-01-06  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Silence -Wtautological-compare
+        https://bugs.webkit.org/show_bug.cgi?id=152768
+
+        Reviewed by Saam Barati.
+
+        * runtime/Options.cpp:
+        (JSC::Options::setAliasedOption):
+
 2016-01-06  Filip Pizlo  <fpizlo@apple.com>
 
         Make sure that the basic throw-from-operation mode of throwing makes sense in FTL B3
